--- a/boj_2039.ipynb
+++ b/boj_2039.ipynb
@@ -16,6 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "from itertools import combinations\n",
+    "\n",
     "fast_input = sys.stdin.readline\n",
     "dwarfs = []\n",
     "\n",
