--- a/boj_11047.ipynb
+++ b/boj_11047.ipynb
@@ -2,32 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (69693290.py, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [4]\u001b[1;36m\u001b[0m\n\u001b[1;33m    def find_min_nums_coins():\u001b[0m\n\u001b[1;37m                              ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "\n",
-    "N, K = map(int, input().split())\n",
-    "print(N, K)\n",
-    "\n",
-    "coins = []\n",
-    "\n",
-    "for i in range(1, N):\n",
-    "    coins.append(int(input()))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -44,6 +18,54 @@
    ],
    "source": [
     "8 // 5, 8 % 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 4200\n",
+      "<class 'int'> <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "sys.stdin = open(\"data/boj_11047.txt\", \"r\")\n",
+    "fast_input = sys.stdin.readlines\n",
+    "N, K = map(int, \" \".join(fast_input()).split())\n",
+    "\n",
+    "\n",
+    "print(N, K)\n",
+    "print(type(N), type(K))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 4200\n",
+      "\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "sys.stdin = open(\"data/boj_11047.txt\", \"r\")\n",
+    "for i in sys.stdin.readlines():\n",
+    "    print(i)\n",
+    "    print(type(i))"
    ]
   }
  ],
