--- a/boj_11047.ipynb
+++ b/boj_11047.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,6 @@
      "output_type": "stream",
      "text": [
       "10 4200\n",
-      "<class 'int'> <class 'int'>\n",
       "1\n",
       "5\n",
       "10\n",
@@ -20,8 +19,7 @@
       "1000\n",
       "5000\n",
       "10000\n",
-      "50000\n",
-      "[1, 5, 10, 50, 100, 500, 1000, 5000, 10000, 50000]\n"
+      "50000\n"
      ]
     }
    ],
@@ -34,14 +32,14 @@
     "x = fast_input()\n",
     "N, K = map(int, \"\".join(x).split())\n",
     "print(N, K)\n",
-    "print(type(N), type(K))\n",
+    "#print(type(N), type(K))\n",
     "\n",
     "coins = []\n",
     "for i in range(N):\n",
     "    coins.append(int(fast_input()))\n",
     "    print(coins[i])\n",
     "    \n",
-    "print(coins)"
+    "#print(coins)"
    ]
   },
   {
