Marvelous solution for Greedy Problems

--- a/boj_11047.ipynb
+++ b/boj_11047.ipynb
@@ -103,6 +103,25 @@
    "source": [
     "a[[False, False, True, True]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, K = map(int, input().split())\n",
+    "coins = [int(input()) for _ in range(N)]\n",
+    "coins.reverse()\n",
+    "ans = 0\n",
+    "\n",
+    "for coin in coins:\n",
+    "    ans += K // coin\n",
+    "    K = K % coin\n",
+    "    print(f\"K : {K}, coin : {coin}, ans : {ans}\")\n",
+    "\n",
+    "print(ans)"
+   ]
   }
  ],
  "metadata": {
