Marvelous solution for Greedy Problems

--- a/boj_11047.ipynb
+++ b/boj_11047.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,8 @@
       "1000\n",
       "5000\n",
       "10000\n",
-      "50000\n"
+      "50000\n",
+      "[1, 5, 10, 50, 100, 500, 1000, 5000, 10000, 50000]\n"
      ]
     }
    ],
@@ -39,12 +40,12 @@
     "    coins.append(int(fast_input()))\n",
     "    print(coins[i])\n",
     "    \n",
-    "#print(coins)"
+    "print(coins)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +54,7 @@
        "[True, True, False, False]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,9 +107,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K : 4200, coin : 50000, ans : 0\n",
+      "K : 4200, coin : 10000, ans : 0\n",
+      "K : 4200, coin : 5000, ans : 0\n",
+      "K : 200, coin : 1000, ans : 4\n",
+      "K : 200, coin : 500, ans : 4\n",
+      "K : 0, coin : 100, ans : 6\n",
+      "K : 0, coin : 50, ans : 6\n",
+      "K : 0, coin : 10, ans : 6\n",
+      "K : 0, coin : 5, ans : 6\n",
+      "K : 0, coin : 1, ans : 6\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "N, K = map(int, input().split())\n",
     "coins = [int(input()) for _ in range(N)]\n",
@@ -117,18 +136,52 @@
     "\n",
     "for coin in coins:\n",
     "    ans += K // coin\n",
-    "    K = K % coin\n",
+    "    K %= coin\n",
     "    print(f\"K : {K}, coin : {coin}, ans : {ans}\")\n",
     "\n",
     "print(ans)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 4200\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, K = map(int, input().split())\n",
+    "print(N, K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "keras_study",
+   "display_name": "base",
    "language": "python",
-   "name": "keras_study"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
