boj.kr/1449.ipynb

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 2\n"
+      "4 2\n",
+      "[  1   2 100 101]\n"
      ]
     }
    ],
@@ -17,7 +18,11 @@
     "import numpy as np\n",
     "\n",
     "N, L = map(int, input().split())\n",
-    "print(N, L)"
+    "print(N, L)\n",
+    "\n",
+    "leaks = list(map(int, input().split()))\n",
+    "leaks = np.array(leaks)\n",
+    "print(leaks)"
    ]
   }
  ],
