boj.kr/1449.ipynb

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -58,44 +58,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "leaks[leaks<=first_tape_right_edge]"
+    "first_tape_left_edge = leaks[0] - 0.5\n",
+    "first_tape_right_edge = first_tape_left_edge + L\n",
+    "\n",
+    "print(first_tape_left_edge, first_tape_right_edge)\n",
+    "\n",
+    "removals = leaks[leaks<=first_tape_right_edge]\n",
+    "print(removals)\n",
+    "num_removed = len(removals)\n",
+    "print(num_removed)\n",
+    "\n",
+    "new_leaks = leaks[num_removed : ]\n",
+    "print(new_leaks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1449.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m leaks\u001b[39m.\u001b[39mall((leaks\u001b[39m>\u001b[39m\u001b[39m=\u001b[39mfirst_tape_left_edge) \u001b[39mand\u001b[39;00m (leaks\u001b[39m<\u001b[39m\u001b[39m=\u001b[39mfirst_tape_right_edge))\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-     ]
-    }
-   ],
-   "source": [
-    "leaks.all((leaks>=first_tape_left_edge) and (leaks<=first_tape_right_edge))"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
