--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -78,10 +78,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 2\n",
+      "[  1   2 100 101]\n",
+      "[100 101]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "N, L = map(int, input().split())\n",
+    "print(N, L)\n",
+    "\n",
+    "leaks = np.array(list(map(int, input().split())))\n",
+    "print(leaks)\n",
+    "\n",
+    "first_tape_right_edge = leaks[0] - 0.5 + L\n",
+    "leaks = leaks[leaks > first_tape_right_edge]\n",
+    "print(leaks)"
+   ]
   }
  ],
  "metadata": {
