boj.kr/1449.ipynb

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -104,6 +104,28 @@
     "leaks = leaks[leaks > first_tape_right_edge]\n",
     "print(leaks)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "N, L = map(int, input().split())\n",
+    "print(N, L)\n",
+    "\n",
+    "leaks = np.array(list(map(int, input().split())))\n",
+    "print(leaks)\n",
+    "num_tapes = 0\n",
+    "\n",
+    "while leaks:\n",
+    "    tape_right_edge = leaks[0] - 0.5 + L\n",
+    "    leaks = leaks[leaks > tape_right_edge]\n",
+    "    print(f\"tape_right_edge : {tape_right_edge}, leaks : {leaks}\")\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
