boj.kr/1449.ipynb

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -107,9 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 2\n",
+      "[  1   2 100 101]\n",
+      "tape_right_edge : 2.5, leaks : [100 101]\n",
+      "tape_right_edge : 101.5, leaks : []\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -120,11 +132,13 @@
     "print(leaks)\n",
     "num_tapes = 0\n",
     "\n",
-    "while leaks:\n",
+    "while len(leaks) > 0:\n",
+    "    num_tapes += 1\n",
     "    tape_right_edge = leaks[0] - 0.5 + L\n",
     "    leaks = leaks[leaks > tape_right_edge]\n",
     "    print(f\"tape_right_edge : {tape_right_edge}, leaks : {leaks}\")\n",
-    "    "
+    "    \n",
+    "print(num_tapes)"
    ]
   }
  ],
