--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -107,17 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 2\n",
-      "[  1   2 100 101]\n",
-      "tape_right_edge : 2.5, leaks : [100 101]\n",
-      "tape_right_edge : 101.5, leaks : []\n",
+      "4 3\n",
+      "[1 2 3 4]\n",
+      "tape_right_edge : 3.5, leaks : [4]\n",
+      "tape_right_edge : 6.5, leaks : []\n",
       "2\n"
      ]
     }
