boj.kr/1449.ipynb

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -107,18 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 3\n",
-      "[1 2 3 4]\n",
-      "tape_right_edge : 3.5, leaks : [4]\n",
-      "tape_right_edge : 6.5, leaks : []\n",
-      "2\n"
+      "3 1\n",
+      "[1 2 3]\n",
+      "tape_right_edge : 1.5, leaks : [2 3]\n",
+      "tape_right_edge : 2.5, leaks : [3]\n",
+      "tape_right_edge : 3.5, leaks : []\n",
+      "3\n"
      ]
     }
    ],
@@ -129,6 +130,7 @@
     "print(N, L)\n",
     "\n",
     "leaks = np.array(list(map(int, input().split())))\n",
+    "leaks.sort()\n",
     "print(leaks)\n",
     "num_tapes = 0\n",
     "\n",
