boj.kr/1449.ipynb

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -141,6 +141,35 @@
     "    \n",
     "print(num_tapes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "N, L = map(int, input().split())\n",
+    "print(N, L)\n",
+    "\n",
+    "leaks = np.array(list(map(int, input().split())))\n",
+    "leaks.sort()\n",
+    "#print(leaks)\n",
+    "\n",
+    "for i in leaks:\n",
+    "    print(i)\n",
+    "    \n",
+    "num_tapes = 0\n",
+    "\n",
+    "while len(leaks) > 0:\n",
+    "    num_tapes += 1\n",
+    "    tape_right_edge = leaks[0] - 0.5 + L\n",
+    "    leaks = leaks[leaks > tape_right_edge]\n",
+    "    #print(f\"tape_right_edge : {tape_right_edge}, leaks : {leaks}\")\n",
+    "    \n",
+    "print(num_tapes)"
+   ]
   }
  ],
  "metadata": {
