boj.kr/1449.ipynb

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -146,7 +146,19 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -154,12 +166,12 @@
     "print(N, L)\n",
     "\n",
     "leaks = np.array(list(map(int, input().split())))\n",
-    "leaks.sort()\n",
     "#print(leaks)\n",
     "\n",
     "for i in leaks:\n",
-    "    print(i)\n",
+    "    print(i, end=\" \")    \n",
     "    \n",
+    "leaks.sort()\n",
     "num_tapes = 0\n",
     "\n",
     "while len(leaks) > 0:\n",
