--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -152,10 +152,7 @@
      "output_type": "stream",
      "text": [
       "3 1\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "3\n"
+      "3 2 1 3\n"
      ]
     }
    ],
@@ -179,7 +176,8 @@
     "    tape_right_edge = leaks[0] - 0.5 + L\n",
     "    leaks = leaks[leaks > tape_right_edge]\n",
     "    #print(f\"tape_right_edge : {tape_right_edge}, leaks : {leaks}\")\n",
-    "    \n",
+    "\n",
+    "print()    \n",
     "print(num_tapes)"
    ]
   }
