boj.kr/1449.ipynb

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -144,15 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 1\n",
-      "3 2 1 3\n"
+      "4 2\n",
+      "1 2 100 101 \n",
+      "2\n"
      ]
     }
    ],
@@ -178,6 +179,42 @@
     "    #print(f\"tape_right_edge : {tape_right_edge}, leaks : {leaks}\")\n",
     "\n",
     "print()    \n",
+    "print(num_tapes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 2\n",
+      "1 2 100 101 \n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, L = map(int, input().split())\n",
+    "print(N, L)\n",
+    "\n",
+    "leaks = list(map(int, input().split()))\n",
+    "for i in leaks:\n",
+    "    print(i, end=' ')\n",
+    "print()\n",
+    "\n",
+    "leaks.sort()\n",
+    "#print(leaks)\n",
+    "num_tapes = 0\n",
+    "\n",
+    "while leaks:\n",
+    "    num_tapes += 1\n",
+    "    tape_right_edge = leaks[0] - 0.5 + L\n",
+    "    leaks = [leak for leak in leaks if leak > tape_right_edge ]\n",
+    "\n",
     "print(num_tapes)"
    ]
   }
