creating dfs_bfs.ipynb

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -41,6 +41,18 @@
     "for row in adj:\n",
     "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(now):\n",
+    "    for nxt in range(len(adj)):\n",
+    "        if adj[now][nxt]:\n",
+    "            dfs(nxt)"
+   ]
   }
  ],
  "metadata": {
