creating dfs_bfs.ipynb

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -44,14 +44,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dfs(now):\n",
     "    for nxt in range(len(adj)):\n",
     "        if adj[now][nxt]:\n",
+    "            print(now)\n",
     "            dfs(nxt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "5\n",
+      "0\n",
+      "7\n",
+      "7\n",
+      "9\n",
+      "9\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfs(0)"
    ]
   }
  ],
