creating dfs_bfs.ipynb

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -44,38 +44,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dfs(now):\n",
+    "    \n",
     "    for nxt in range(len(adj)):\n",
     "        if adj[now][nxt]:\n",
-    "            print(now)\n",
-    "            dfs(nxt)"
+    "            print((now, nxt))\n",
+    "            dfs(nxt)            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "2\n",
-      "1\n",
-      "5\n",
-      "0\n",
-      "7\n",
-      "7\n",
-      "9\n",
-      "9\n",
-      "9\n"
+      "(0, 1)\n",
+      "(1, 2)\n",
+      "(2, 3)\n",
+      "(2, 4)\n",
+      "(1, 5)\n",
+      "(5, 6)\n",
+      "(0, 7)\n",
+      "(7, 8)\n",
+      "(7, 9)\n",
+      "(9, 10)\n",
+      "(9, 11)\n",
+      "(9, 12)\n"
      ]
     }
    ],
