--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,31 +52,31 @@
     "    \n",
     "    for nxt in range(len(adj)):\n",
     "        if adj[now][nxt]:\n",
-    "            print((now, nxt))\n",
+    "            print(f\"({now} --> {nxt})\")\n",
     "            dfs(nxt)            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 1)\n",
-      "(1, 2)\n",
-      "(2, 3)\n",
-      "(2, 4)\n",
-      "(1, 5)\n",
-      "(5, 6)\n",
-      "(0, 7)\n",
-      "(7, 8)\n",
-      "(7, 9)\n",
-      "(9, 10)\n",
-      "(9, 11)\n",
-      "(9, 12)\n"
+      "(0 --> 1)\n",
+      "(1 --> 2)\n",
+      "(2 --> 3)\n",
+      "(2 --> 4)\n",
+      "(1 --> 5)\n",
+      "(5 --> 6)\n",
+      "(0 --> 7)\n",
+      "(7 --> 8)\n",
+      "(7 --> 9)\n",
+      "(9 --> 10)\n",
+      "(9 --> 11)\n",
+      "(9 --> 12)\n"
      ]
     }
    ],
