creating dfs_bfs.ipynb

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -92,10 +92,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "adj = [[0] * 13 for _ in range(13)]\n",
+    "adj[0][1], adj[0][2] = 1, 1\n",
+    "adj[1][3], adj[1][4], adj[2][5], adj[2][6] = 1, 1, 1, 1\n",
+    "adj[3][7], adj[3][8], adj[4][9], adj[6][10], adj[6][11], adj[6][12] = 1, 1, 1, 1, 1, 1\n",
+    "\n",
+    "for row in adj:\n",
+    "    print(row)"
+   ]
   },
   {
    "cell_type": "code",
