creating dfs_bfs.ipynb

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -127,10 +127,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def bfs():\n",
+    "    dq = deque()\n",
+    "    dq.append(0)\n",
+    "    for i in range(13):\n",
+    "        for j in range(13):\n",
+    "            if adj[i][j]:\n",
+    "                dq.popleft()\n",
+    "                dq.append(j)"
+   ]
   }
  ],
  "metadata": {
