creating dfs_bfs.ipynb

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -149,6 +149,30 @@
     "                dq.popleft()\n",
     "                dq.append(j)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs():\n",
+    "    dq = deque()\n",
+    "    dq.append(0)\n",
+    "    \n",
+    "    while dq:\n",
+    "        now = dq.popleft()\n",
+    "        for nxt in range(13):\n",
+    "            if adj[now][nxt]:\n",
+    "                dq.append(nxt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
