creating dfs_bfs.ipynb

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,15 +164,18 @@
     "        now = dq.popleft()\n",
     "        for nxt in range(13):\n",
     "            if adj[now][nxt]:\n",
+    "                print(f\"({now} --> {nxt})\")\n",
     "                dq.append(nxt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bfs()"
+   ]
   }
  ],
  "metadata": {
