Understanding Finding a path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -197,6 +197,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 길찾기 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dy = (0, 1, 0, -1)\n",
+    "dx = (1, 0, -1, 0)\n",
+    "\n",
+    "chk = [[False] * 8 for _ in range(8)]\n",
+    "N = int(input())\n",
+    "\n",
+    "def is_valid_coord(y, x):\n",
+    "    return 0 <= y < N and 0 <= x < N\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "def bfs(start_y, start_x):\n",
+    "    q = deque()\n",
+    "    q.append((start_y, start_x))\n",
+    "    print((start_y, start_x))\n",
+    "    print()\n",
+    "        \n",
+    "    while len(q) > 0: \n",
+    "        y, x = q.popleft()\n",
+    "        chk[y][x] = True\n",
+    "        for k in range(4):\n",
+    "            ny = y + dy[k]\n",
+    "            nx = x + dx[k]\n",
+    "                        \n",
+    "            if is_valid_coord(ny, nx) and not chk[ny][nx]:\n",
+    "                q.append((ny, nx))\n",
+    "                print((ny, nx), end=', ')\n",
+    "            print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 2)\n",
+      "\n",
+      "\n",
+      "\n",
+      "(2, 1), \n",
+      "(1, 2), \n",
+      "\n",
+      "\n",
+      "(2, 0), \n",
+      "(1, 1), \n",
+      "\n",
+      "\n",
+      "(1, 1), \n",
+      "(0, 2), \n",
+      "\n",
+      "\n",
+      "\n",
+      "(1, 0), \n",
+      "\n",
+      "\n",
+      "(1, 0), \n",
+      "(0, 1), \n",
+      "\n",
+      "\n",
+      "(1, 0), \n",
+      "(0, 1), \n",
+      "\n",
+      "\n",
+      "(0, 1), \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "(0, 0), \n",
+      "\n",
+      "\n",
+      "\n",
+      "(0, 0), \n",
+      "\n",
+      "\n",
+      "(0, 0), \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "(0, 0), \n",
+      "\n",
+      "\n",
+      "(0, 0), \n",
+      "\n",
+      "\n",
+      "\n",
+      "(0, 0), \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "bfs(2, 2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
