Understanding Finding a path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -212,7 +212,7 @@
     "dy = (0, 1, 0, -1)\n",
     "dx = (1, 0, -1, 0)\n",
     "\n",
-    "chk = [[False] * 10 for _ in range(10)]\n",
+    "chk = [[False] * 5 for _ in range(5)]\n",
     "N = int(input())\n",
     "\n",
     "def is_valid_coord(y, x):\n",
@@ -223,9 +223,8 @@
     "def bfs(start_y, start_x):\n",
     "    q = deque()\n",
     "    q.append((start_y, start_x))\n",
-    "    print((start_y, start_x))\n",
-    "    print()\n",
-    "        \n",
+    "    print(f\"The starting coordinates is {start_y, start_x}\")\n",
+    "            \n",
     "    while len(q) > 0: \n",
     "        y, x = q.popleft()\n",
     "        chk[y][x] = True\n",
@@ -235,8 +234,8 @@
     "                        \n",
     "            if is_valid_coord(ny, nx) and not chk[ny][nx]:\n",
     "                q.append((ny, nx))\n",
-    "                print((ny, nx), end=', ')\n",
-    "            print()"
+    "                print((ny, nx), end=' ')                \n",
+    "        print(\"Let's go to the next moves!\")"
    ]
   },
   {
