--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +224,7 @@
     "    q = deque()\n",
     "    q.append((start_y, start_x))\n",
     "    print(f\"The starting coordinates is {start_y, start_x}\")\n",
+    "    print()\n",
     "            \n",
     "    while len(q) > 0: \n",
     "        y, x = q.popleft()\n",
@@ -234,97 +235,152 @@
     "                        \n",
     "            if is_valid_coord(ny, nx) and not chk[ny][nx]:\n",
     "                q.append((ny, nx))\n",
-    "                print((ny, nx), end=' ')                \n",
-    "        print(\"Let's go to the next moves!\")"
+    "                print((ny, nx), end=' ')\n",
+    "        print()                \n",
+    "        print(\"Let's go to the next moves!\")\n",
+    "        print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 2)\n",
+      "The starting coordinates is (2, 2)\n",
+      "(2, 3) (3, 2) (2, 1) (1, 2) \n",
+      "Let's go to the next moves!\n",
+      "(2, 4) (3, 3) (1, 3) \n",
+      "Let's go to the next moves!\n",
+      "(3, 3) (4, 2) (3, 1) \n",
+      "Let's go to the next moves!\n",
+      "(3, 1) (2, 0) (1, 1) \n",
+      "Let's go to the next moves!\n",
+      "(1, 3) (1, 1) (0, 2) \n",
+      "Let's go to the next moves!\n",
+      "(3, 4) (1, 4) \n",
+      "Let's go to the next moves!\n",
+      "(3, 4) (4, 3) \n",
+      "Let's go to the next moves!\n",
+      "(1, 4) (0, 3) \n",
+      "Let's go to the next moves!\n",
+      "(3, 4) (4, 3) \n",
+      "Let's go to the next moves!\n",
+      "(4, 3) (4, 1) \n",
+      "Let's go to the next moves!\n",
+      "(4, 1) (3, 0) \n",
+      "Let's go to the next moves!\n",
+      "(4, 1) (3, 0) \n",
+      "Let's go to the next moves!\n",
+      "(3, 0) (1, 0) \n",
+      "Let's go to the next moves!\n",
+      "(1, 0) (0, 1) \n",
+      "Let's go to the next moves!\n",
+      "(1, 4) (0, 3) \n",
+      "Let's go to the next moves!\n",
+      "(1, 0) (0, 1) \n",
+      "Let's go to the next moves!\n",
+      "(0, 3) (0, 1) \n",
+      "Let's go to the next moves!\n",
+      "(4, 4) \n",
+      "Let's go to the next moves!\n",
+      "(0, 4) \n",
+      "Let's go to the next moves!\n",
+      "(4, 4) \n",
+      "Let's go to the next moves!\n",
+      "(4, 4) \n",
+      "Let's go to the next moves!\n",
+      "(0, 4) \n",
+      "Let's go to the next moves!\n",
+      "(0, 4) \n",
+      "Let's go to the next moves!\n",
+      "(4, 4) \n",
+      "Let's go to the next moves!\n",
+      "(4, 4) \n",
+      "Let's go to the next moves!\n",
+      "(4, 4) \n",
+      "Let's go to the next moves!\n",
+      "(4, 0) \n",
+      "Let's go to the next moves!\n",
+      "(4, 0) \n",
+      "Let's go to the next moves!\n",
+      "(4, 0) \n",
+      "Let's go to the next moves!\n",
+      "(4, 0) \n",
+      "Let's go to the next moves!\n",
+      "(4, 0) \n",
+      "Let's go to the next moves!\n",
+      "(4, 0) \n",
+      "Let's go to the next moves!\n",
+      "(0, 0) \n",
+      "Let's go to the next moves!\n",
+      "(0, 0) \n",
+      "Let's go to the next moves!\n",
+      "(0, 0) \n",
+      "Let's go to the next moves!\n",
+      "(0, 4) \n",
+      "Let's go to the next moves!\n",
+      "(0, 4) \n",
+      "Let's go to the next moves!\n",
+      "(0, 0) \n",
+      "Let's go to the next moves!\n",
+      "(0, 0) \n",
+      "Let's go to the next moves!\n",
+      "(0, 4) \n",
+      "Let's go to the next moves!\n",
+      "(0, 0) \n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
-      "(2, 1), \n",
-      "(1, 2), \n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
-      "(2, 0), \n",
-      "(1, 1), \n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
-      "(1, 1), \n",
-      "(0, 2), \n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
-      "(1, 0), \n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
-      "(1, 0), \n",
-      "(0, 1), \n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
-      "(1, 0), \n",
-      "(0, 1), \n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
-      "(0, 1), \n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
-      "(0, 0), \n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
-      "(0, 0), \n",
+      "Let's go to the next moves!\n",
       "\n",
-      "\n",
-      "(0, 0), \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "(0, 0), \n",
-      "\n",
-      "\n",
-      "(0, 0), \n",
-      "\n",
-      "\n",
-      "\n",
-      "(0, 0), \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
+      "Let's go to the next moves!\n"
      ]
     }
    ],
