Understanding Finding a path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -235,7 +235,7 @@
     "                        \n",
     "            if is_valid_coord(ny, nx) and not chk[ny][nx]:\n",
     "                q.append((ny, nx))\n",
-    "                print((ny, nx), end=' ')\n",
+    "                print(f\"from {(y, x)} {(ny, nx)}\", end=' ')\n",
     "        print()                \n",
     "        print(\"Let's go to the next moves!\")\n",
     "        print()"
