--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
     "                        \n",
     "            if is_valid_coord(ny, nx) and not chk[ny][nx]:\n",
     "                q.append((ny, nx))\n",
-    "                print(f\"from {(y, x)} {(ny, nx)}\", end=' ')\n",
+    "                print(f\"from {(y, x)} with {dy[k], dx[k]} == to {(ny, nx)}\")\n",
     "        print()                \n",
     "        print(\"Let's go to the next moves!\")\n",
     "        print()"
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,136 +251,202 @@
      "output_type": "stream",
      "text": [
       "The starting coordinates is (2, 2)\n",
-      "(2, 3) (3, 2) (2, 1) (1, 2) \n",
+      "\n",
+      "from (2, 2) (2, 3) from (2, 2) (3, 2) from (2, 2) (2, 1) from (2, 2) (1, 2) \n",
       "Let's go to the next moves!\n",
-      "(2, 4) (3, 3) (1, 3) \n",
+      "\n",
+      "from (2, 3) (2, 4) from (2, 3) (3, 3) from (2, 3) (1, 3) \n",
       "Let's go to the next moves!\n",
-      "(3, 3) (4, 2) (3, 1) \n",
+      "\n",
+      "from (3, 2) (3, 3) from (3, 2) (4, 2) from (3, 2) (3, 1) \n",
       "Let's go to the next moves!\n",
-      "(3, 1) (2, 0) (1, 1) \n",
+      "\n",
+      "from (2, 1) (3, 1) from (2, 1) (2, 0) from (2, 1) (1, 1) \n",
       "Let's go to the next moves!\n",
-      "(1, 3) (1, 1) (0, 2) \n",
+      "\n",
+      "from (1, 2) (1, 3) from (1, 2) (1, 1) from (1, 2) (0, 2) \n",
       "Let's go to the next moves!\n",
-      "(3, 4) (1, 4) \n",
+      "\n",
+      "from (2, 4) (3, 4) from (2, 4) (1, 4) \n",
       "Let's go to the next moves!\n",
-      "(3, 4) (4, 3) \n",
+      "\n",
+      "from (3, 3) (3, 4) from (3, 3) (4, 3) \n",
       "Let's go to the next moves!\n",
-      "(1, 4) (0, 3) \n",
+      "\n",
+      "from (1, 3) (1, 4) from (1, 3) (0, 3) \n",
       "Let's go to the next moves!\n",
-      "(3, 4) (4, 3) \n",
+      "\n",
+      "from (3, 3) (3, 4) from (3, 3) (4, 3) \n",
       "Let's go to the next moves!\n",
-      "(4, 3) (4, 1) \n",
+      "\n",
+      "from (4, 2) (4, 3) from (4, 2) (4, 1) \n",
       "Let's go to the next moves!\n",
-      "(4, 1) (3, 0) \n",
+      "\n",
+      "from (3, 1) (4, 1) from (3, 1) (3, 0) \n",
       "Let's go to the next moves!\n",
-      "(4, 1) (3, 0) \n",
+      "\n",
+      "from (3, 1) (4, 1) from (3, 1) (3, 0) \n",
       "Let's go to the next moves!\n",
-      "(3, 0) (1, 0) \n",
+      "\n",
+      "from (2, 0) (3, 0) from (2, 0) (1, 0) \n",
       "Let's go to the next moves!\n",
-      "(1, 0) (0, 1) \n",
+      "\n",
+      "from (1, 1) (1, 0) from (1, 1) (0, 1) \n",
       "Let's go to the next moves!\n",
-      "(1, 4) (0, 3) \n",
+      "\n",
+      "from (1, 3) (1, 4) from (1, 3) (0, 3) \n",
       "Let's go to the next moves!\n",
-      "(1, 0) (0, 1) \n",
+      "\n",
+      "from (1, 1) (1, 0) from (1, 1) (0, 1) \n",
       "Let's go to the next moves!\n",
-      "(0, 3) (0, 1) \n",
+      "\n",
+      "from (0, 2) (0, 3) from (0, 2) (0, 1) \n",
       "Let's go to the next moves!\n",
-      "(4, 4) \n",
+      "\n",
+      "from (3, 4) (4, 4) \n",
       "Let's go to the next moves!\n",
-      "(0, 4) \n",
+      "\n",
+      "from (1, 4) (0, 4) \n",
       "Let's go to the next moves!\n",
-      "(4, 4) \n",
+      "\n",
+      "from (3, 4) (4, 4) \n",
       "Let's go to the next moves!\n",
-      "(4, 4) \n",
+      "\n",
+      "from (4, 3) (4, 4) \n",
       "Let's go to the next moves!\n",
-      "(0, 4) \n",
+      "\n",
+      "from (1, 4) (0, 4) \n",
       "Let's go to the next moves!\n",
-      "(0, 4) \n",
+      "\n",
+      "from (0, 3) (0, 4) \n",
       "Let's go to the next moves!\n",
-      "(4, 4) \n",
+      "\n",
+      "from (3, 4) (4, 4) \n",
       "Let's go to the next moves!\n",
-      "(4, 4) \n",
+      "\n",
+      "from (4, 3) (4, 4) \n",
       "Let's go to the next moves!\n",
-      "(4, 4) \n",
+      "\n",
+      "from (4, 3) (4, 4) \n",
       "Let's go to the next moves!\n",
-      "(4, 0) \n",
+      "\n",
+      "from (4, 1) (4, 0) \n",
       "Let's go to the next moves!\n",
-      "(4, 0) \n",
+      "\n",
+      "from (4, 1) (4, 0) \n",
       "Let's go to the next moves!\n",
-      "(4, 0) \n",
+      "\n",
+      "from (3, 0) (4, 0) \n",
       "Let's go to the next moves!\n",
-      "(4, 0) \n",
+      "\n",
+      "from (4, 1) (4, 0) \n",
       "Let's go to the next moves!\n",
-      "(4, 0) \n",
+      "\n",
+      "from (3, 0) (4, 0) \n",
       "Let's go to the next moves!\n",
-      "(4, 0) \n",
+      "\n",
+      "from (3, 0) (4, 0) \n",
       "Let's go to the next moves!\n",
-      "(0, 0) \n",
+      "\n",
+      "from (1, 0) (0, 0) \n",
       "Let's go to the next moves!\n",
-      "(0, 0) \n",
+      "\n",
+      "from (1, 0) (0, 0) \n",
       "Let's go to the next moves!\n",
-      "(0, 0) \n",
+      "\n",
+      "from (0, 1) (0, 0) \n",
       "Let's go to the next moves!\n",
-      "(0, 4) \n",
+      "\n",
+      "from (1, 4) (0, 4) \n",
       "Let's go to the next moves!\n",
-      "(0, 4) \n",
+      "\n",
+      "from (0, 3) (0, 4) \n",
       "Let's go to the next moves!\n",
-      "(0, 0) \n",
+      "\n",
+      "from (1, 0) (0, 0) \n",
       "Let's go to the next moves!\n",
-      "(0, 0) \n",
+      "\n",
+      "from (0, 1) (0, 0) \n",
       "Let's go to the next moves!\n",
-      "(0, 4) \n",
+      "\n",
+      "from (0, 3) (0, 4) \n",
       "Let's go to the next moves!\n",
-      "(0, 0) \n",
+      "\n",
+      "from (0, 1) (0, 0) \n",
       "Let's go to the next moves!\n",
+      "\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "Let's go to the next moves!\n"
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n"
      ]
     }
    ],
