--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
     "        for k in range(4):\n",
     "            ny = y + dy[k]\n",
     "            nx = x + dx[k]\n",
-    "                        \n",
+    "                      \n",
     "            if is_valid_coord(ny, nx) and not chk[ny][nx]:\n",
     "                q.append((ny, nx))\n",
     "                print(f\"from {(y, x)} with {dy[k], dx[k]} == to {(ny, nx)}\")\n",
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -252,127 +252,191 @@
      "text": [
       "The starting coordinates is (2, 2)\n",
       "\n",
-      "from (2, 2) (2, 3) from (2, 2) (3, 2) from (2, 2) (2, 1) from (2, 2) (1, 2) \n",
+      "from (2, 2) with (0, 1) == to (2, 3)\n",
+      "from (2, 2) with (1, 0) == to (3, 2)\n",
+      "from (2, 2) with (0, -1) == to (2, 1)\n",
+      "from (2, 2) with (-1, 0) == to (1, 2)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (2, 3) (2, 4) from (2, 3) (3, 3) from (2, 3) (1, 3) \n",
+      "from (2, 3) with (0, 1) == to (2, 4)\n",
+      "from (2, 3) with (1, 0) == to (3, 3)\n",
+      "from (2, 3) with (-1, 0) == to (1, 3)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (3, 2) (3, 3) from (3, 2) (4, 2) from (3, 2) (3, 1) \n",
+      "from (3, 2) with (0, 1) == to (3, 3)\n",
+      "from (3, 2) with (1, 0) == to (4, 2)\n",
+      "from (3, 2) with (0, -1) == to (3, 1)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (2, 1) (3, 1) from (2, 1) (2, 0) from (2, 1) (1, 1) \n",
+      "from (2, 1) with (1, 0) == to (3, 1)\n",
+      "from (2, 1) with (0, -1) == to (2, 0)\n",
+      "from (2, 1) with (-1, 0) == to (1, 1)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 2) (1, 3) from (1, 2) (1, 1) from (1, 2) (0, 2) \n",
+      "from (1, 2) with (0, 1) == to (1, 3)\n",
+      "from (1, 2) with (0, -1) == to (1, 1)\n",
+      "from (1, 2) with (-1, 0) == to (0, 2)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (2, 4) (3, 4) from (2, 4) (1, 4) \n",
+      "from (2, 4) with (1, 0) == to (3, 4)\n",
+      "from (2, 4) with (-1, 0) == to (1, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (3, 3) (3, 4) from (3, 3) (4, 3) \n",
+      "from (3, 3) with (0, 1) == to (3, 4)\n",
+      "from (3, 3) with (1, 0) == to (4, 3)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 3) (1, 4) from (1, 3) (0, 3) \n",
+      "from (1, 3) with (0, 1) == to (1, 4)\n",
+      "from (1, 3) with (-1, 0) == to (0, 3)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (3, 3) (3, 4) from (3, 3) (4, 3) \n",
+      "from (3, 3) with (0, 1) == to (3, 4)\n",
+      "from (3, 3) with (1, 0) == to (4, 3)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (4, 2) (4, 3) from (4, 2) (4, 1) \n",
+      "from (4, 2) with (0, 1) == to (4, 3)\n",
+      "from (4, 2) with (0, -1) == to (4, 1)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (3, 1) (4, 1) from (3, 1) (3, 0) \n",
+      "from (3, 1) with (1, 0) == to (4, 1)\n",
+      "from (3, 1) with (0, -1) == to (3, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (3, 1) (4, 1) from (3, 1) (3, 0) \n",
+      "from (3, 1) with (1, 0) == to (4, 1)\n",
+      "from (3, 1) with (0, -1) == to (3, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (2, 0) (3, 0) from (2, 0) (1, 0) \n",
+      "from (2, 0) with (1, 0) == to (3, 0)\n",
+      "from (2, 0) with (-1, 0) == to (1, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 1) (1, 0) from (1, 1) (0, 1) \n",
+      "from (1, 1) with (0, -1) == to (1, 0)\n",
+      "from (1, 1) with (-1, 0) == to (0, 1)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 3) (1, 4) from (1, 3) (0, 3) \n",
+      "from (1, 3) with (0, 1) == to (1, 4)\n",
+      "from (1, 3) with (-1, 0) == to (0, 3)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 1) (1, 0) from (1, 1) (0, 1) \n",
+      "from (1, 1) with (0, -1) == to (1, 0)\n",
+      "from (1, 1) with (-1, 0) == to (0, 1)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (0, 2) (0, 3) from (0, 2) (0, 1) \n",
+      "from (0, 2) with (0, 1) == to (0, 3)\n",
+      "from (0, 2) with (0, -1) == to (0, 1)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (3, 4) (4, 4) \n",
+      "from (3, 4) with (1, 0) == to (4, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 4) (0, 4) \n",
+      "from (1, 4) with (-1, 0) == to (0, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (3, 4) (4, 4) \n",
+      "from (3, 4) with (1, 0) == to (4, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (4, 3) (4, 4) \n",
+      "from (4, 3) with (0, 1) == to (4, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 4) (0, 4) \n",
+      "from (1, 4) with (-1, 0) == to (0, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (0, 3) (0, 4) \n",
+      "from (0, 3) with (0, 1) == to (0, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (3, 4) (4, 4) \n",
+      "from (3, 4) with (1, 0) == to (4, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (4, 3) (4, 4) \n",
+      "from (4, 3) with (0, 1) == to (4, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (4, 3) (4, 4) \n",
+      "from (4, 3) with (0, 1) == to (4, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (4, 1) (4, 0) \n",
+      "from (4, 1) with (0, -1) == to (4, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (4, 1) (4, 0) \n",
+      "from (4, 1) with (0, -1) == to (4, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (3, 0) (4, 0) \n",
+      "from (3, 0) with (1, 0) == to (4, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (4, 1) (4, 0) \n",
+      "from (4, 1) with (0, -1) == to (4, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (3, 0) (4, 0) \n",
+      "from (3, 0) with (1, 0) == to (4, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (3, 0) (4, 0) \n",
+      "from (3, 0) with (1, 0) == to (4, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 0) (0, 0) \n",
+      "from (1, 0) with (-1, 0) == to (0, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 0) (0, 0) \n",
+      "from (1, 0) with (-1, 0) == to (0, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (0, 1) (0, 0) \n",
+      "from (0, 1) with (0, -1) == to (0, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 4) (0, 4) \n",
+      "from (1, 4) with (-1, 0) == to (0, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (0, 3) (0, 4) \n",
+      "from (0, 3) with (0, 1) == to (0, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 0) (0, 0) \n",
+      "from (1, 0) with (-1, 0) == to (0, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (0, 1) (0, 0) \n",
+      "from (0, 1) with (0, -1) == to (0, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (0, 3) (0, 4) \n",
+      "from (0, 3) with (0, 1) == to (0, 4)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (0, 1) (0, 0) \n",
+      "from (0, 1) with (0, -1) == to (0, 0)\n",
+      "\n",
       "Let's go to the next moves!\n",
       "\n",
       "\n",
