Understanding Finding a path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -237,8 +237,7 @@
     "                q.append((ny, nx))\n",
     "                print(f\"from {(y, x)} with {dy[k], dx[k]} == to {(ny, nx)}\")\n",
     "        print()                \n",
-    "        print(\"Let's go to the next moves!\")\n",
-    "        print()"
+    "        print(\"Let's go to the next moves!\")        "
    ]
   },
   {
