--- a/boj_11724.ipynb
+++ b/boj_11724.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "6 5\n",
       "1 2\n",
       "\n",
       "2 5\n",
@@ -49,8 +50,60 @@
     }
    ],
    "source": [
-    "x = \"6 5\"\n",
-    "x.split(\" \")"
+    "import sys\n",
+    "sys.stdin = open(\"data/boj_11724.txt\")\n",
+    "fast_input = sys.stdin.readline\n",
+    "N, M = map(int, fast_input().split(\" \"))\n",
+    "print(N, M)\n",
+    "\n",
+    "cc_1 = []\n",
+    "for _ in range(M):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a and b have at least one element in common.\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 4, 9]\n",
+    "b = [6, 9]\n",
+    "#a.extend(b)\n",
+    "#print(a)\n",
+    "\n",
+    "if set(a).intersection(b):\n",
+    "    print(\"a and b have at least one element in common.\")\n",
+    "else:\n",
+    "    print(\"a and b have no element in common.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{9}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(a).intersection(b)"
    ]
   }
  ],
