Understanding Finding a path using bfs

--- a/boj_11724.ipynb
+++ b/boj_11724.ipynb
@@ -35,18 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['6', '5']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 5\n",
+      "[['1', '2'], ['2', '5'], ['5', '1'], ['3', '4'], ['4', '6']]\n"
+     ]
     }
    ],
    "source": [
@@ -56,55 +54,19 @@
     "N, M = map(int, fast_input().split(\" \"))\n",
     "print(N, M)\n",
     "\n",
-    "cc_1 = []\n",
+    "cc_list = []\n",
     "for _ in range(M):\n",
-    "    "
+    "    cc_list.append(fast_input().split())\n",
+    "    \n",
+    "print(cc_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a and b have at least one element in common.\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = [1, 2, 4, 9]\n",
-    "b = [6, 9]\n",
-    "#a.extend(b)\n",
-    "#print(a)\n",
-    "\n",
-    "if set(a).intersection(b):\n",
-    "    print(\"a and b have at least one element in common.\")\n",
-    "else:\n",
-    "    print(\"a and b have no element in common.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{9}"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(a).intersection(b)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
