--- a/boj_11724.ipynb
+++ b/boj_11724.ipynb
@@ -92,22 +92,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 5\n",
+      "6 8\n",
       "1 2\n",
       "2 5\n",
       "5 1\n",
       "3 4\n",
       "4 6\n",
-      "[[1, 2], [2, 5], [5, 1], [3, 4], [4, 6]]\n",
-      "[[1, 2], [2, 5], [5, 1], [3, 4], [4, 6]]\n",
-      "5\n"
+      "5 4\n",
+      "2 4\n",
+      "2 3\n",
+      "[[1, 2], [2, 5], [5, 1], [3, 4], [4, 6], [5, 4], [2, 4], [2, 3]]\n",
+      "[[1, 2, 2, 5, 5, 1], [3, 4, 4, 6, 5, 4, 2, 4, 2, 3]]\n",
+      "2\n"
      ]
     }
    ],
@@ -129,7 +132,7 @@
     "for i in range(1, N+1):\n",
     "    chk_sum = 0\n",
     "    for j, list in enumerate(cc_list):\n",
-    "        if str(i) in list:\n",
+    "        if i in list:\n",
     "            chk_sum += 1\n",
     "            if chk_sum >=2:\n",
     "                x = cc_list[j]\n",
