--- a/boj_2178.ipynb
+++ b/boj_2178.ipynb
@@ -26,43 +26,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = \"12345\"\n",
-    "len(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "['1', '2', '3', '4', '5']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "a = \"12345\"\n",
+    "print(len(a))\n",
+    "\n",
     "\" \".join(a).split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 1, 1, 1, 1], [1, 0, 1, 0, 1, 0], [1, 0, 1, 0, 1, 1], [1, 1, 1, 0, 1, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, M = map(int, input().split())\n",
+    "adj = [[0] * M for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "   x = input()\n",
+    "   x_list = \" \".join(x).split()\n",
+    "   adj[i] = [int(x[j]) for j in range(len(x_list))]\n",
+    "   \n",
+    "print(adj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '0', '1', '1', '1', '1']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\" \".join(\"101111\").split()"
    ]
   }
  ],
