--- a/boj_2178.ipynb
+++ b/boj_2178.ipynb
@@ -81,6 +81,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 1, 1, 1, 1]\n",
+      "[1, 0, 1, 0, 1, 0]\n",
+      "[1, 0, 1, 0, 1, 1]\n",
+      "[1, 1, 1, 0, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in adj:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
