--- a/boj_2178.ipynb
+++ b/boj_2178.ipynb
@@ -102,6 +102,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[False, False, False, False, False, False],\n",
+       " [False, False, False, False, False, False],\n",
+       " [False, False, False, False, False, False],\n",
+       " [False, False, False, False, False, False]]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chk = [[False] * M for _ in range(N)]\n",
+    "chk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_valid_coord(y, x):\n",
+    "    return 0 <= y < N and 0 <= x < M"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
